# vnstock

./: .env.template  .gitignore  1_1_vnstock_data_explorer_v2_wrapper.ipynb  DataOrchestrator.py  FinalThesis.pbix  FinanceApi.py  README.md  main.py  migration_to_snowflake_date.sql  pyproject.toml  requirements.txt  run.bat  schema.sql  schema_dwh.sql  setup_dwh_triggers.sql  utility.py  vnstock_exp.pbix
DBInterface/: DBInterface.py
DataOrchestrator/: DataOrchestrator.py
FinanceApi/: FinanceApi.py
util/: utility.py
